crates/vvv/tests/corpus/snapshots/ts__imports__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 0
--- stdout ---
imports every file

--- stderr ---
∅ nothing to look at
