crates/vvv/tests/corpus/snapshots/ts__imports__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 0
--- stdout ---
{"result":{"redundant":[],"unplaced":[],"unresolved":[],"unused":[]},"schema":1,"status":"ok"}
--- stderr ---
